namespace java com.moseeker.thrift.gen.dao.struct.campaigndb
namespace py thrift_gen.gen.dao.struct.campaigndb


struct CampaignEdmUserrecommendedPositionsDO {

	1: optional i32 id,	//null
	2: optional i32 campaignId,	//null
	3: optional i32 userId,	//null
	4: optional i32 positionId,	//null
	5: optional double score,	//推荐分
	6: optional string createTime	//null

}
